styles.css
body {
    display: flex;
    flex-direction: column;
    background: #1F2937;
    margin: 0;
}

.header {
    display: flex;
    justify-content: space-around;
    background: #1F2937;
    color: white;
}

.logo {
    font-size: 24px;
}

.headerlinks {
    color: #E5E7EB;
    display: flex;
    gap: 18px;
    font-size: 15px;
}
.content {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}


.sub1 {
    display: flex;
    background: #1F2937;
    margin: 0px;
    color: #F9FAF8;
    justify-content: space-around;
    padding-top: 50px;
    gap: 25px;
    flex-wrap: wrap;
}

.sub1Text {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

.paragraph {
    display: flex;
    font-size: 48px;
}
.smallpara {
    font-size: 18px;
    color: #E5E7EB;
}
.darkcardbutton {
    background-color: #3882F6;
    color: #F9FAF8;
    width: 100px;
    border-radius: 7px;
    border-color: #3882F6;

}
.sub1image {
    width: 300px;
}



ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

a {
    color: white;
    text-decoration: none;
    font-size: 24px;
  }


.sub2 {
    background: #F9FAF8;
    display: flex;
    justify-content: center;
    font-size: 32px;
    font-weight: 900;
    color: #1F2937;
    padding: 20px;
    align-items: center;
}
.container {
    background: #F9FAF8;
    display: flex;
    justify-content: center;
    gap: 30px;
    padding-bottom: 50px;
    
}
.sub2img {
    width: 100px;
    height: 100px;
    border: 2px solid#3882F6;
    border-radius: 25px;
}
.sub3{
    display: flex;
    background: #E5E7EB;
    justify-content: center;
    align-items: center;
    padding: 75px 170px;
}
.quote {
    display: flex;
    font-style: italic;
    font-size: 36px;
    color: #1F2937;
    flex: 1;
}
.quoteauthor {
    display: flex;
}
.sub4 {
    display: flex;
    justify-content: center;
    align-items: center;
    background: #F9FAF8;
}
.footer {
    display: flex;
    justify-content: center;
    color: #F9FAF8;
    align-items: center;
}
.blucontainer {
    display: flex;
    justify-content: center;
    align-items: center;
    background: #3882F6;
    border-radius: 25px;
}

